<resources>
    <string name="app_name">KidsSummer Organizer</string>

    <string name="welcome_xyz_reader">Welcome to KidsSummer Organizer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="bg">background</string>
    <string name="transition_photo">transition_photo</string>

    <string name="title_your_children">Your Children</string>

    <string name="btn_add_child">Add Child</string>

    <string name="btn_save_child">Save Child</string>

    <string name="btn_add_camp">Add Camp</string>

    <string name="title_add_child">Add Child</string>
    <string name="title_add_camp">Add Camp</string>
   <string name="title_edit_camp">Edit Camp</string>


    <string name="btn_save_camp">Save Camp</string>

    <string name="child_name_hint">Name</string>
    <string name="child_age_hint">Age</string>

    <string name="camp_name_hint">Camp Name</string>
    <string name="camp_cont_name_hint">Camp Contact Name</string>
    <string name="camp_phone_hint">Camp Contact Phone</string>
    <string name="camp_street_hint">Camp Address</string>
   <string name="camp_city_hint">City</string>
    <string name="camp_state_hint">State</string>
    <string name="camp_zip_hint">Zip</string>

    <string name="validate_empty_field">Field is empty!</string>


    <string name="camp_from_date">Week: from</string>
    <string name="camp_to_date">to</string>
    <string name="camp_str_date">Start Date</string>
    <string name="camp_end_date">End Date</string>


    <string name="camp_from_hrs">Hours: from</string>
    <string name="camp_to_hrs">to</string>
    <string name="camp_strTime_hrs">Start Time</string>
    <string name="camp_endTime_hrs">End Time</string>


    <string name="alert_internet">You have no internet connection but this app will still sync your data</string>




    <string name="camp_has_lunch">Camp Provides Lunch?</string>

    <string-array name="hasLunch_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="camp_notes_hint">Additional Notes to Remember:</string>

    <string name="detail_error_message">Sorry there has been an error</string>




</resources>
