<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator"
    >
    <!--
    https://www.androidauthority.com/using-coordinatorlayout-android-apps-703720/
    https://material.io/design/environment/elevation.html
    -->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        app:expanded="false">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleMarginStart="72dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:id="@+id/toolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/kidssummer_organizer_banner"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/bg"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/scrim" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                android:layout_marginRight="@dimen/list_toolbar_side_margin"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_name" />

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_titleMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="44dp"
                    android:gravity="top"
                    android:text="@string/title_add_child"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.153"
                    tools:layout_conversion_absoluteHeight="27dp"
                    tools:layout_conversion_absoluteWidth="411dp" />


                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/child_name_hint"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_titleMain" />

                <EditText
                    android:id="@+id/ageInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/child_age_hint"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameInput" />


                <Button
                    android:id="@+id/btn_child"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addChild"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/btn_save_child"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ageInput"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="411dp" />


            </android.support.constraint.ConstraintLayout>
        </ScrollView>


</android.support.design.widget.CoordinatorLayout>
