<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <!--
    https://www.androidauthority.com/using-coordinatorlayout-android-apps-703720/
    https://material.io/design/environment/elevation.html
    -->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleMarginStart="72dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:id="@+id/toolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/kidssummer_organizer_banner"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/bg"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/scrim" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                android:layout_marginRight="@dimen/list_toolbar_side_margin"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_name" />

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_titleChildDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_camp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.009"
                    tools:layout_conversion_absoluteHeight="27dp"
                    tools:layout_conversion_absoluteWidth="411dp" />


                <Button
                    android:id="@+id/btn_camp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="getAddCampActivity"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/btn_add_camp"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_titleChildDetail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.042"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="411dp" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_camps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/btn_camp"
                    tools:layout_editor_absoluteX="24dp" />


            </android.support.constraint.ConstraintLayout>






        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>
